--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "teronis-nodejs-version-cli",
-  "version": "0.0.1",
+  "name": "@teronis/version-cli",
+  "version": "0.0.2",
   "description": "Manage version publishments.",
   "main": "bin/teronis-version.js",
   "scripts": {
